adds movies-index html and js folders

--- a/public/index.html
+++ b/public/index.html
@@ -1,46 +1,61 @@
-<nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand">Navbar</a>
-  <form class="form-inline">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-  </form>
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="index.js" defer></script>
+</head>
+<body>
 
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">Actors</h1>
-    <p class="lead">Scroll down to learn about the actors on this site.</p>
-  </div>
-</div>
+  <nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand">Navbar  </a>
+    <form class="form-inline">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search  </button>
+    </form>
+  </nav>
 
-<div class="card mb-3" style="max-width: 540px;">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-      <img src="https://m.media-amazon.com/images/M/MV5BMTIzMzY1MzEyNV5BMl5BanBnXkFtZTYwNjU4MTg1._V1_UY317_CR8,0,214,317_AL_.jpg" class="card-img" alt="Image Not Available">
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">Actors  </h1>
+      <p class="lead">Scroll down to learn about the actors on this site.  </p>
     </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Leonard Nemoy</h5>
-        <p class="card-text">An American actor, fim director, photographer, author, singerand songwriter. March 31, 1931 - February 27, 2015</p>
-        <button type="button" class="btn btn-info">Info</button>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  </div>
+
+  <div class="card mb-3" style="max-width: 540px;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="https://m.media-amazon.com/images/M/MV5BMTIzMzY1MzEyNV5BMl5BanBnXkFtZTYwNjU4MTg1._V1_UY317_CR8,0,214,317_AL_.jpg" class="card-img" alt="Image Not Available">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Leonard Nemoy  </h5>
+          <p class="card-text">An American actor, fim director, photographer, author, singerand songwriter. March 31, 1931 - February 27, 2015  </p>
+          <button type="button" class="btn btn-info">Info  </button>
+          <p class="card-text">  <small class="text-muted">Last updated 3 mins ago  </small>  </p>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="card mb-3" style="max-width: 540px;">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Jon_Voight_2012.jpg/220px-Jon_Voight_2012.jpg" class="card-img" alt="Image Not Available">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">John Voight</h5>
-        <p class="card-text">An American actor. December 29, 1938 - .</p>
-        <button type="button" class="btn btn-info">Info</button>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  <div class="card mb-3" style="max-width: 540px;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Jon_Voight_2012.jpg/220px-Jon_Voight_2012.jpg" class="card-img" alt="Image Not Available">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">John Voight  </h5>
+          <p class="card-text">An American actor. December 29, 1938 - .  </p>
+          <button type="button" class="btn btn-info">Info  </button>
+          <p class="card-text">  <small class="text-muted">Last updated 3 mins ago  </small>  </p>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+
+</body>
+</html>
