adds some text to actors HTML

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">Leonard Nemoy  </h5>
-          <p class="card-text">An American actor, fim director, photographer, author, singerand songwriter. March 31, 1931 - February 27, 2015  </p>
+          <p class="card-text">An American actor, fim director, photographer, author, singer and songwriter. March 31, 1931 - February 27, 2015  </p>
           <button type="button" class="btn btn-info">Info  </button>
           <p class="card-text">  <small class="text-muted">Last updated 3 mins ago  </small>  </p>
         </div>
@@ -47,7 +47,7 @@
       </div>
       <div class="col-md-8">
         <div class="card-body">
-          <h5 class="card-title">John Voight  </h5>
+          <h5 class="card-title">John Voight (81 years old) </h5>
           <p class="card-text">An American actor. December 29, 1938 - .  </p>
           <button type="button" class="btn btn-info">Info  </button>
           <p class="card-text">  <small class="text-muted">Last updated 3 mins ago  </small>  </p>
