fixes some grammar in the index.html

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">Actors  </h1>
-      <p class="lead">Scroll down to learn about the actors on this site.  </p>
+      <p class="lead">Meet the actors on this site.  </p>
     </div>
   </div>
 
@@ -32,7 +32,7 @@
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">Leonard Nemoy  </h5>
-          <p class="card-text">An American actor, fim director, photographer, author, singer and songwriter. March 31, 1931 - February 27, 2015  </p>
+          <p class="card-text">An American actor, film director, photographer, author, singer and songwriter. March 31, 1931 - February 27, 2015  </p>
           <button type="button" class="btn btn-info">Info  </button>
           <p class="card-text">  <small class="text-muted">Last updated 3 mins ago  </small>  </p>
         </div>
